<resources>
    <string name="app_name">Textim</string>
    <string name="heyyo_welcome">Heyyo, Welcome!</string>
    <string name="login_now">Login now</string>
    <string name="email">Email</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="login">Login</string>
    <string name="upload_image">Upload Image</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="write_a_message">Write a message</string>
    <string name="select_a_user">Select a user</string>
    <string name="online">Online</string>
</resources>